<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSDN_Blog</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Tab选项卡 -->
    <string name="blog">博客</string>
    <string name="column">专栏</string>
    <string name="experts">博客专家</string>
    <string name="setting">设置</string>
    
    <!-- 博客导航条 -->
    <string name="mobile_development">移动开发</string>
    <string name="Web">Web前端</string>
    <string name="framework_design">架构设计</string>
    <string name="programming_languages">编程语言</string>
    <string name="internet">互联网</string>
    <string name="database">数据库</string>
    <string name="system_operation">系统运维</string>
    <string name="cloud_computing">云计算</string>
    <string name="research_development_management">研发管理</string>
	<string name="synthesize">综合</string>
	
	<string name="detail">正文</string>
	
	<!-- 专栏 -->
	<string name="column_detail">专栏详情</string>
	<string name="column_search">专栏搜索</string>
	<string name="search_hint">请输入关键词</string>
	<string name="search">搜索</string>
	
	<!-- 博客专家 -->
	<string name="expert_detail">博客专家详情</string>
	
	<!-- 设置 -->
    <string name="check_update">检查更新</string>
    <string name="load_picture_in_wifi">只有在WiFi下显示图片</string>
    <string name="clear_cache">清除缓存</string>
    <string name="isReading">正在读取...</string>
    <string name="about">关于本应用</string>
    
    <string name="about_message">本应用所有数据都来自CSDN网站,只用于学习,不可用于商业活动</string>
	
</resources>
