<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<TabHost
	    android:id="@+id/tabhost"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical">
	        <FrameLayout
	            android:id="@android:id/tabcontent"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_weight="1000">
	            <LinearLayout
	                android:id="@+id/tab1"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="vertical">
	                <RelativeLayout
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:paddingTop="12dip"
		                android:paddingBottom="12dip"
		                android:background="#148af7">
	                    <TextView
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/blog"
	                        android:textColor="#ffffff"
	                        android:layout_centerInParent="true"
	                        android:textSize="18sp" />
	            	</RelativeLayout>
	            	<HorizontalScrollView
				        android:id="@+id/viewpager_head_scrollview"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:scrollbars="none">
				        <LinearLayout 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:orientation="vertical">
				            <LinearLayout
					            android:id="@+id/viewpager_head"
					            android:layout_width="wrap_content"
					            android:layout_height="wrap_content"
					            android:orientation="horizontal" 
					            android:background="#ffffff">
					            <TextView
					                android:id="@+id/viewpager_head_1"
					                style="@style/viewPagerItemStyle"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:text="@string/mobile_development"
									android:textColor="#148af7"/>
					            <TextView
					                android:id="@+id/viewpager_head_2"
					                style="@style/viewPagerItemStyle"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:text="@string/Web" />
					            <TextView
					                android:id="@+id/viewpager_head_3"
					                style="@style/viewPagerItemStyle"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:text="@string/framework_design" />
					            <TextView
					                android:id="@+id/viewpager_head_4"
					                style="@style/viewPagerItemStyle"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:text="@string/programming_languages" />
					            <TextView
					                android:id="@+id/viewpager_head_5"
					                style="@style/viewPagerItemStyle"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:text="@string/internet" />
					            <TextView
					                android:id="@+id/viewpager_head_6"
					                style="@style/viewPagerItemStyle"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:text="@string/database" />
					            <TextView
					                android:id="@+id/viewpager_head_7"
					                style="@style/viewPagerItemStyle"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:text="@string/system_operation" />
					            <TextView
					                android:id="@+id/viewpager_head_8"
					                style="@style/viewPagerItemStyle"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:text="@string/cloud_computing" />
					            <TextView
					                android:id="@+id/viewpager_head_9"
					                style="@style/viewPagerItemStyle"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:text="@string/research_development_management" />
					            <TextView
					                android:id="@+id/viewpager_head_10"
					                style="@style/viewPagerItemStyle"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:text="@string/synthesize" />
					        </LinearLayout>
					        <TextView 
					        android:id="@+id/viewpager_head_tip"
					        android:layout_width="wrap_content"
					        android:layout_height="2dip"
					        android:background="#148af7"/>
				        </LinearLayout>
					    </HorizontalScrollView>'
					    <android.support.v4.view.ViewPager
						    android:id="@+id/viewpager"
						    android:layout_width="match_parent"
						    android:layout_height="match_parent"/>
	            </LinearLayout>
	            <LinearLayout
	                android:id="@+id/tab2"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="vertical">
	                <RelativeLayout 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:paddingTop="12dip"
		                android:paddingBottom="12dip"
		                android:background="#148af7">
		                <TextView
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_centerInParent="true"
		                    android:textColor="#ffffff"
		                    android:textSize="18sp"
		                    android:text="@string/column"/>
		                <ImageView 
		                    android:id="@+id/column_search_icon"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_alignParentRight="true"
		                    android:layout_marginRight="15dip"
		                    android:background="@drawable/column_search_nor"/>
		            </RelativeLayout>
		            <com.handmark.pulltorefresh.library.PullToRefreshListView 
				        xmlns:ptr="http://schemas.android.com/apk/res-auto"
				        android:id="@+id/column_newsListView"
				        android:layout_width="match_parent"
				        android:layout_height="match_parent"
				        ptr:ptrDrawable="@drawable/head_arrow"
				        ptr:ptrAnimationStyle="flip"/>
	            </LinearLayout>
	            <LinearLayout
	                android:id="@+id/tab3"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="vertical">
	                <LinearLayout 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:orientation="vertical"
		                android:paddingTop="12dip"
		                android:paddingBottom="12dip"
		                android:background="#148af7">
		                <TextView
		                    android:layout_width="match_parent"
		                    android:layout_height="wrap_content"
		                    android:gravity="center"
		                    android:textColor="#ffffff"
		                    android:textSize="18sp"
		                    android:text="@string/experts"/>
		            </LinearLayout>
	            </LinearLayout>
	            <LinearLayout
	                android:id="@+id/tab4"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="vertical">
	                <LinearLayout 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:orientation="vertical"
		                android:paddingTop="12dip"
		                android:paddingBottom="12dip"
		                android:background="#148af7">
		                <TextView
		                    android:layout_width="match_parent"
		                    android:layout_height="wrap_content"
		                    android:gravity="center"
		                    android:textColor="#ffffff"
		                    android:textSize="18sp"
		                    android:text="@string/personality"/>
		            </LinearLayout>
	            </LinearLayout>
	        </FrameLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical">
	            <TextView 
	                android:layout_width="match_parent"
		            android:layout_height="1dip"
		            android:background="#cccccc"
		            android:layout_marginBottom="2dip"/>
	            <TabWidget 
		            android:id="@android:id/tabs"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:showDividers="none">
		        </TabWidget>
	        </LinearLayout>
	    </LinearLayout>
	</TabHost>
</LinearLayout>
