<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dip"
        android:paddingBottom="12dip"
        android:background="#148af7">
        <ImageView 
	         android:id="@+id/detail_item_back"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:background="@drawable/navigationbar_back"
	         android:layout_centerVertical="true"
	         android:layout_marginLeft="10dip"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_search"
            android:textColor="#ffffff"
            android:layout_centerInParent="true"
            android:textSize="18sp" />
   	</RelativeLayout>
   	<LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="horizontal"
   	    android:paddingTop="25dip">
        <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/search_bg"
	    android:layout_marginLeft="10dip"
	    android:padding="1dip"
	    android:layout_weight="1000">
	    <ImageView
	        android:id="@+id/column_search_icon"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:background="@drawable/column_search_nor"
	        android:layout_marginLeft="5dip"/>
	    <EditText
	        android:id="@+id/column_search_edit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_toRightOf="@id/column_search_icon"
	        android:background="@drawable/search_input_bg"
	        android:hint="@string/search_hint" 
	        android:lines="1"
	        android:layout_centerVertical="true"
	        android:padding="5dip"/>
		</RelativeLayout>
   	    <TextView 
	        android:id="@+id/column_search_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/search"
	        android:layout_gravity="center"
	        android:textSize="18sp"
	        android:textColor="#b2a3a3"
	        android:padding="9dip"/>
   	</LinearLayout>
	<FrameLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    <ListView 
	        android:id="@+id/column_search_result"
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"/>
	    <TextView
	        android:id="@+id/column_searching_icon"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/loading"
	        android:layout_gravity="center"
	        android:visibility="gone"/>
	</FrameLayout>
</LinearLayout>
